syntax="proto3";
package pblogin;
option go_package = ".proto/user;pbUser";

message HelloRequest{
  string name = 1;
  int32 age = 2;
}

message HelloResponse{
  string resp = 1;
}

service SayHello{
  rpc SayHelloToWho(HelloRequest) returns (HelloResponse);
}